--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,7 @@
 			"Welcome": {
 				"Title": "Welcome on my Website!",
 				"Content1": "Welcome on my brand new Website ! It has been updated on {contentUpdate} (software : {softUpdate}). Developed with the {vue-link} framework, it is more lisible and simple. The design has been created with the {semantic-link} CSS library.",
-				"Content2": "The website is not yet totally bilingual, but I am still working hard on it! It tooks so much time to translate all its contents. A small {actualite} will be published when it will be completely translated to english 😉. For the moment, only some components are available, and also my {cv}."
+				"Content2": "The website is almost totally bilingual! Please feel free to send me an email if you want to correct some mistakes I made during the translation process 😉."
 			},
 			"SecureCom": {
 				"Title": "A secure way to talk",
@@ -165,7 +165,7 @@
 			},
 			"SecureCom": {
 				"Title": "Secured communications",
-				"Text": "If you want to communicate securely with me, I use OpenPGP on some of my important email addresses. I regularly sign messages with this system. You will find the corresponding OpenPGP information attached to each email address by clicking on the small green padlock. This will open a small pop-up that will give you my public key, its digest, and the link to OpenPGP keys server. I am using this one to distribute my public key so that it can be accessed directly in the Thunderbird key manager."
+				"Text": "If you want to communicate securely with me, I use OpenPGP on some of my important email addresses. I regularly sign messages with this system. You will find the corresponding OpenPGP information attached to each email address by clicking on the small green key. This will open a small pop-up that will give you my public key, its digest, and the link to OpenPGP keys server. I am using this one to distribute my public key so that it can be accessed directly in the Thunderbird key manager."
 			},
 			"VersionsHistory": {
 				"Title": "Versions history"
